--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Unit2-career-simulator</title>
     <script src="./index.js" defer ></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Puppy Bowl</h1>
